(rule
 (target scanner.ml)
 (deps scanner.mll)
 (action
  (chdir
   %{workspace_root}
   (run %{bin:ocamllex} -q -o %{target} %{deps}))))

(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (chdir
   %{workspace_root}
   (run %{bin:ocamlyacc} %{deps}))))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (public_name ParserFix)
 (name toplevel)
 (libraries ParserFix))
